tests/diagnostics/non_exhaustive_match.kal
# The match does not cover every variant (B is missing) and has no wildcard.
enum E { A, B }
fn f(e: E) -> i64 = match e { A => 1 };
